--- a/TLCS/training_settings.ini
+++ b/TLCS/training_settings.ini
@@ -1,28 +1,28 @@
 [simulation]
 gui = False
-total_episodes = 50
-max_steps = 1000
+total_episodes = 200
+max_steps = 4000
 n_cars_generated = 1000
-green_duration = 30
-yellow_duration = 7
+green_duration = 15
+yellow_duration = 5
 
 [model]
 num_layers = 4
-width_layers = 20
+width_layers = 400
 batch_size = 100
-learning_rate = 0.0001
-training_epochs = 800
+learning_rate = 0.001
+training_epochs = 100
 
 [memory]
 memory_size_min = 100
 memory_size_max = 50000
 
 [agent]
-num_states = 6
+num_states = 11
 num_actions = 9
 gamma = 0.75
 
 [dir]
 models_path_name = models
-sumocfg_file_name = ain_naadja.sumocfg
+sumocfg_file_name = one.sumocfg
 simulation_folder = intersection
