--- a/TLCS/training_settings.ini
+++ b/TLCS/training_settings.ini
@@ -3,8 +3,10 @@ gui = False
 total_episodes = 200
 max_steps = 4000
 n_cars_generated = 1000
+simulation_time = 1000
 green_duration = 15
 yellow_duration = 5
+
 
 [model]
 num_layers = 4
@@ -26,3 +28,5 @@ gamma = 0.75
 models_path_name = models
 sumocfg_file_name = one.sumocfg
 simulation_folder = intersection
+flow_file = intersection/traffic_flow/one_flow.json
+route_file = intersection/one.rou.xml
