before set up many intersections

--- a/TLCS/models/model_2/test/testing_one_settings.ini
+++ b/TLCS/models/model_2/test/testing_one_settings.ini
@@ -14,8 +14,8 @@ num_actions = 9
 
 [dir]
 models_path_name = models
-sumocfg_file_name = ain_naadja.sumocfg
+sumocfg_file_name = two_one.sumocfg
 simulation_folder = intersection
-model_to_test = 1
-flow_file = intersection/traffic_flow/ain_naadja_flow.json
-route_file = intersection/ain_naadja.rou.xml
+model_to_test = 2
+flow_file = intersection/traffic_flow/two_flow.json
+route_file = intersection/two_one.rou.xml
