--- a/TLCS/models/model_3/test/testing_ttl_settings.ini
+++ b/TLCS/models/model_3/test/testing_ttl_settings.ini
@@ -9,11 +9,11 @@ yellow_duration = 5
 
 
 [agent]
-num_states = 17
-num_actions = 27
+num_states = 11
+num_actions = 9
 
 [dir]
 models_path_name = models
 simulation_folder = intersection
-simulation_name = four_one
-model_to_test = 9
+simulation_name = two
+model_to_test = 3
