--- a/TLCS/models/model_3/training_settings.ini
+++ b/TLCS/models/model_3/training_settings.ini
@@ -20,13 +20,13 @@ memory_size_min = 100
 memory_size_max = 50000
 
 [agent]
-num_states = 17
-num_actions = 27
+num_states = 11
+num_actions = 9
 gamma = 0.75
 
 [dir]
 models_path_name = models
+sumocfg_file_name = two.sumocfg
 simulation_folder = intersection
-simulation_name = four
-
-
+flow_file = intersection/traffic_flow/two_flow.json
+route_file = intersection/two.rou.xml
